[package]
name = "jumpstarter-controller-service"
description = "Jumpstarter controller gRPC services: ControllerService + jumpstarter.client.v1 ClientService (Listen/Status/Dial, lease RPCs), plus the login (:8086) HTTP surface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jumpstarter-protocol = { path = "../jumpstarter-protocol" }
jumpstarter-controller-api = { path = "../jumpstarter-controller-api" }
jumpstarter-controller-auth = { path = "../jumpstarter-controller-auth" }
jumpstarter-controller-config = { path = "../jumpstarter-controller-config" }
jumpstarter-controller-core = { path = "../jumpstarter-controller-core" }
kube = { workspace = true, features = ["client", "config", "runtime", "rustls-tls", "ring"] }
k8s-openapi.workspace = true
tonic = { workspace = true, features = ["tls"] }
tonic-health.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
prost-types.workspace = true
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { workspace = true }
futures = "0.3"
tracing.workspace = true
uuid = { version = "1", features = ["v4", "v7"] }
base64 = "0.22"

[dev-dependencies]
rcgen = { workspace = true }
serde_yaml_ng = { workspace = true }
http = "1"
tokio = { workspace = true, features = ["test-util", "process"] }
