[package]
name = "jumpstarter-core-uniffi"
description = "UniFFI bindings (Python/Kotlin/Swift) for the Jumpstarter Rust core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# cdylib = the loadable Python extension (`jumpstarter_core`); lib = consumable by the
# uniffi-bindgen helper binary. The lib name is the Python module name.
[lib]
crate-type = ["cdylib", "lib"]
name = "jumpstarter_core"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
jumpstarter-core = { path = "../jumpstarter-core" }
jumpstarter-exporter = { path = "../jumpstarter-exporter" }
jumpstarter-transport = { path = "../jumpstarter-transport" }
# Streaming resource codecs, exposed over FFI as StreamCompressor/StreamDecompressor so the
# in-process Python transport (serve()'s LocalSession) decompresses/compresses with the SAME Rust
# codec the real host seam (foreign.rs) uses — no Python-side wire codec, no per-language drift.
jumpstarter-compression = { path = "../jumpstarter-compression" }
jumpstarter-config = { path = "../jumpstarter-config" }
# The Rust `jmp` CLI command tree, driven from the language entrypoints via `run_cli`.
jumpstarter-cli = { path = "../jumpstarter-cli" }
uniffi = { version = "0.31", features = ["tokio", "cli"] }
# The session watch-channels the per-entry driver-host server pins (serve_driver_host).
tokio = { workspace = true, features = ["sync"] }
async-trait = "0.1"
thiserror.workspace = true
# YAML <-> JSON for the config-parsing FFI (so Python drops pyyaml). serde_yaml_ng::Value is
# order-preserving (IndexMap), so a JSON->yaml dump keeps the pydantic field order.
serde_json.workspace = true
serde_yaml_ng.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# The native CLI installs a process-default rustls CryptoProvider at startup; the FFI extension
# (loaded into Python) must do the same before its first TLS handshake (controller/exporter).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
