[package]
name = "jumpstarter-core"
description = "Binding-agnostic facade for the Jumpstarter Rust core (Python/Kotlin/C bindings wrap this)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# This crate is the stable, FFI-shaped Rust API that every language binding wraps.
# It owns the value codec application, DriverReport assembly, and the binding-agnostic
# `ForeignHostApi` seam. It MUST NOT depend on uniffi/cbindgen/jni (enforced by a CI lint):
# those live only in the per-binding crates (jumpstarter-core-uniffi, jumpstarter-core-capi).
[dependencies]
jumpstarter-protocol = { path = "../jumpstarter-protocol" }
# The facade implements the shared `DriverBackend` seam over the binding-agnostic per-driver
# `Driver` (host side) and exposes a `ClientSession` over the client crate's transport (client
# side). It depends on `jumpstarter-transport` (the seam), NOT on `jumpstarter-exporter` — so a
# client consumer never compiles the exporter runtime (subprocess spawn, hooks, session server,
# signals). The exporter is pulled only by `jumpstarter-core-uniffi` / the CLI — i.e. things that
# actually run an exporter (local development).
jumpstarter-transport = { path = "../jumpstarter-transport" }
jumpstarter-client = { path = "../jumpstarter-client" }
jumpstarter-config = { path = "../jumpstarter-config" }
# Rust is the sole owner of resource-stream (de)compression for the byte plane (gzip/xz/bz2/zstd);
# the host seam (foreign.rs) and the client seam (client.rs) drive these streaming codecs so Python
# never touches the wire codec.
jumpstarter-compression = { path = "../jumpstarter-compression" }
prost-types.workspace = true
serde_json.workspace = true
async-trait = "0.1"
thiserror.workspace = true
tonic.workspace = true
# Mint uuids for native Rust drivers served via NativeDriverBackend.
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tokio-stream = "0.1"
