[package]
name = "jumpstarter-core"
description = "Binding-agnostic facade for the Jumpstarter Rust core (Python/Kotlin/C bindings wrap this)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# This crate is the stable, FFI-shaped Rust API that every language binding wraps.
# It owns the value codec application, DriverReport assembly, and the binding-agnostic
# `ForeignHostApi` seam. It MUST NOT depend on uniffi/cbindgen/jni (enforced by a CI lint):
# those live only in the per-binding crates (jumpstarter-core-uniffi, jumpstarter-core-capi).
[dependencies]
jumpstarter-protocol = { path = "../jumpstarter-protocol" }
# Neutral protocol plumbing: the value/dispatch codec, native dispatch table, error taxonomy,
# and cross-boundary DTOs. Core re-exports these (transitional facade) until each consumer is
# migrated onto the codec crate directly in a later phase.
jumpstarter-codec = { path = "../jumpstarter-codec" }
# Transitional facade: the CLIENT side (`ClientSession`, `ControllerSession`, `LeaseTransport`,
# `resolve_driver_uuid`) now lives in `jumpstarter-client`. Core re-exports it so existing client
# consumers keep compiling against `jumpstarter_core::ClientSession` until a later phase migrates
# each onto the client crate directly.
jumpstarter-client = { path = "../jumpstarter-client" }
# The facade implements the shared `DriverBackend` seam over the binding-agnostic per-driver
# `Driver` (host side). It depends on `jumpstarter-transport` (the seam), NOT on `jumpstarter-exporter`
# — so a client consumer never compiles the exporter runtime (subprocess spawn, hooks, session server,
# signals). The exporter is pulled only by `jumpstarter-core-uniffi` / the CLI — i.e. things that
# actually run an exporter (local development).
jumpstarter-transport = { path = "../jumpstarter-transport" }
jumpstarter-config = { path = "../jumpstarter-config" }
# Rust is the sole owner of resource-stream (de)compression for the byte plane (gzip/xz/bz2/zstd);
# the host seam (foreign.rs) and the client seam (client.rs) drive these streaming codecs so Python
# never touches the wire codec.
jumpstarter-compression = { path = "../jumpstarter-compression" }
prost-types.workspace = true
# Dynamic gRPC dispatch: decode/encode opaque per-interface request/response messages
# straight from their protobuf descriptors (no per-driver generated servicer). 0.14 is
# the prost-0.13-compatible line (matches `prost`/`prost-types` above).
prost-reflect = "0.14"
prost.workspace = true
serde_json.workspace = true
async-trait = "0.1"
thiserror.workspace = true
tonic.workspace = true
# Mint uuids for native Rust drivers served via NativeDriverBackend.
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true, features = ["rt", "sync", "macros", "net", "time", "io-util"] }
tokio-stream = "0.1"
tracing.workspace = true
# The native demux `forward_unary` seam carries opaque per-driver proto messages as raw bytes;
# `DynamicBackend` names `bytes::Bytes` in that signature (already transitive via tonic/transport).
bytes = "1"

[dev-dependencies]
# End-to-end native-dispatch test: stand up the transport-crate `Demux` over `InProcessTransport`
# and drive it with a raw `tonic` client. axum/tower/http mirror the demux's own wiring (tonic
# re-exports axum 0.7); they are test-only so the facade itself stays free of the server stack.
axum = { version = "0.7", default-features = false }
tower = { version = "0.5", features = ["util"] }
http = "1"
