[package]
name = "jumpstarter-driver-example"
description = "Example native Rust driver(s) + the jmp-rust-host driver-host binary (proves polyglot per-driver hosting)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# The reusable example driver(s) live in the lib; `jmp-rust-host` is the standalone single-driver
# host binary the polyglot hub spawns for a `runtime: rust` entry (mirrors jumpstarter.exporter_host).
[lib]
name = "jumpstarter_driver_example"
path = "src/lib.rs"

[[bin]]
name = "jmp-rust-host"
path = "src/main.rs"

[dependencies]
jumpstarter-core = { path = "../jumpstarter-core" }
jumpstarter-exporter = { path = "../jumpstarter-exporter" }
jumpstarter-config = { path = "../jumpstarter-config" }
jumpstarter-transport = { path = "../jumpstarter-transport" }
jumpstarter-driver-macros = { path = "../jumpstarter-driver-macros" }
async-trait = "0.1"
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "signal"] }
