[package]
name = "jumpstarter-driver-macros"
description = "Proc macros for native Jumpstarter drivers/clients (the #[derive(DriverClient)] CLI dispatch)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
